--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Poppins&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=IBM+Plex+Mono&family=Poppins&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -11,6 +11,55 @@
 
 body {
   background: var(--primary-background);
-  font-family: 'Poppins', sans-serif;
+  font-family: "Poppins", sans-serif;
   color: var(--primary-text);
+}
+
+input[type="range"] {
+  -webkit-appearance: none;
+  appearance: none;
+  width: 400px;
+  height: 10px;
+  outline: none;
+  overflow: hidden;
+  border-radius: 16px;
+  transition: all 1s;
+}
+
+/* Track: webkit browsers */
+input[type="range"]::-webkit-slider-runnable-track {
+  height: 10px;
+  background: #ccc;
+  border-radius: 16px;
+  transition: all 1s;
+}
+
+/* Thumb: webkit */
+input[type="range"]::-webkit-slider-thumb {
+  -webkit-appearance: none;
+  appearance: none;
+  height: 10px;
+  width: 10px;
+  background-color: #f50;
+  border-radius: 50%;
+  border: 2px solid #f50;
+  box-shadow: -407px 0 0 400px #f50;
+  transition: all 1s;
+}
+
+/* Thumb: Firefox */
+input[type="range"]::-moz-range-thumb {
+  height: 10px;
+  width: 10px;
+  background-color: #f50;
+  border-radius: 100%;
+  border: 1px solid #f50;
+  box-shadow: -407px 0 0 400px #f50;
+  transition: all 1s;
+}
+
+@media (max-width: 550px) {
+  input[type="range"]{
+    width: 100%;
+  }
 }
