--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -15,6 +15,10 @@ body {
   color: var(--primary-text);
 }
 
+* {
+  scroll-behavior: smooth;
+}
+
 input[type="range"] {
   -webkit-appearance: none;
   appearance: none;
@@ -59,7 +63,7 @@ input[type="range"]::-moz-range-thumb {
 }
 
 @media (max-width: 550px) {
-  input[type="range"]{
+  input[type="range"] {
     width: 100%;
   }
 }
